<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ayuda"
        android:orderInCategory="100"
        android:title="@string/ayuda"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_ayuda"
        />
    <item
        android:id="@+id/action_spain"
        android:icon="@mipmap/ic_spa_redonda"
        android:title="@string/spa"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/action_uk"
        android:title="@string/eng"
        app:showAsAction="always"
        android:icon="@mipmap/ic_uk_redonda"
        />
    <item
        android:id="@+id/action_cana"
        android:title="@string/can"
        app:showAsAction="always"
        android:icon="@mipmap/ic_canary_redonda"
        />
</menu>