<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.agoney.comparaprecios.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/cabecera"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="30sp" />
<Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/productos"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lista"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/infoApp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/salir"
        android:textAlignment="center"
        android:textSize="18sp" />

</android.support.v7.widget.LinearLayoutCompat>
