<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.agoney.comparaprecios.Fragment.Fragment_agregar_nombre">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CampoTextoPurpura"
            >
            <EditText
                android:id="@+id/TxtInputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:textColorHint="@color/colorHint"
                />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/RadioGroupFamilia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <RadioButton
                        android:id="@+id/RadioBtnFamilia1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia1" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RadioBtnFamilia1"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia2" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RadioBtnFamilia2"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia3" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RadioBtnFamilia3"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia4" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RadioBtnFamilia4"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia5" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RadioBtnFamilia5"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia6" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia7"
                        android:layout_toRightOf="@+id/RadioBtnFamilia1"
                        />
                    <RadioButton
                        android:id="@+id/RadioBtnFamilia8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia8"
                        android:layout_toRightOf="@+id/RadioBtnFamilia2"
                        android:layout_below="@+id/RadioBtnFamilia7"
                        android:layout_alignLeft="@+id/RadioBtnFamilia7"
                        />
                    <RadioButton
                        android:id="@+id/RadioBtnFamilia9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia9"
                        android:layout_below="@+id/RadioBtnFamilia8"
                        android:layout_toRightOf="@+id/RadioBtnFamilia3"
                        android:layout_alignLeft="@+id/RadioBtnFamilia8"
                        />
                    <RadioButton
                        android:id="@+id/RadioBtnFamilia10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia10"
                        android:layout_below="@+id/RadioBtnFamilia9"
                        android:layout_toRightOf="@+id/RadioBtnFamilia4"
                        android:layout_alignLeft="@+id/RadioBtnFamilia9"
                        />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/RadioBtnFamilia10"
                        android:layout_below="@+id/RadioBtnFamilia10"
                        android:layout_toRightOf="@+id/RadioBtnFamilia5"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/familia11" />

                    <RadioButton
                        android:id="@+id/RadioBtnFamilia12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/RadioBtnFamilia11"
                        android:layout_below="@+id/RadioBtnFamilia11"
                        android:layout_toRightOf="@+id/RadioBtnFamilia6"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/familia12" />
                </RadioGroup>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
