<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.agoney.comparaprecios.ActivityLanguage"
    tools:showIn="@layout/activity_language"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:weightSum="5"
    >

    <TextView
        android:id="@+id/txtLenguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/elegir_languaje"
        android:textSize="24sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RadioGroupLanguage"
        >
        <RadioButton
            android:id="@+id/RadioBtnSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spa"
            android:textSize="18sp"
            />
        <RadioButton
            android:id="@+id/RadioBtnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/RadioBtnCanario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can"
            android:textSize="18sp" />
    </RadioGroup>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImageViewLanguage"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        />
</LinearLayout>
